plugins {
    id 'org.springframework.boot' version '3.2.3' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
    id 'java'
}

allprojects {
    group = 'hoops'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    clean {
        delete "${buildDir}"
        delete "${projectDir}/.gradle"
    }

    dependencies {
        // Spring Boot
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
        
        // Database - JDBC
        implementation 'org.postgresql:postgresql:42.7.2'
        implementation 'com.zaxxer:HikariCP:5.1.0'
        
        // Redis
        implementation 'redis.clients:jedis:5.1.0'

        // Test containers
        testImplementation 'org.testcontainers:postgresql:1.19.6'
        testImplementation 'org.testcontainers:junit-jupiter:1.19.6'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'

        // Annotation processors
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    }

    bootJar {
        enabled = true
    }

    jar {
        enabled = false
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += '--enable-preview'
        options.release = 21
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
} 